# My_Content_Filter

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
blocklists/: games.txt
conf/: blocked_ips.txt  blocked_sites.txt
include/: filter.h
src/: my_filter.cpp
